--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
     },
 	"AUTO_CC": {
       "description": "对于接收者不包含缺省接收邮箱的请求, 自动抄送一份给缺省邮件接收邮箱, 用于避免接口滥用",
-	  "value": True
+	"value": "True"
     },
 	"RETRY_TIMES": {
       "description": "邮件发送失败时的自动重试次数",
